# cowsay_application

./: README.md  db.sqlite3  pyproject.toml
cowsay_app/: admin.py  forms.py  models.py  urls.py  views.py
cowsay_app/migrations/: 0001_initial.py  0002_auto_20200512_0057.py  0003_auto_20200512_0058.py  0004_remove_cowsayinput_output_text.py
cowsay_app/static/css/: home.css
cowsay_app/templates/: index.html  most_recent.html
myproject/: settings.py  urls.py
