[tool.poetry]
name = "cowsay_application"
version = "0.1.0"
description = "cowsay application"
authors = ["Patrick Buzzo <pbuzzo04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
cowsay = "^2.0.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
